--- a/package.json
+++ b/package.json
@@ -11,49 +11,34 @@
     "build": "npx expo export:web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^19.0.0",
-    "@firebase/app": "^0.10.17",
-    "@firebase/auth": "^1.8.1",
-    "@firebase/firestore": "^4.7.5",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/cli": "^15.1.2",
-    "@react-native-community/cli-server-api": "^16.0.0",
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@expo/metro-runtime": "~3.2.3",
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/cli-server-api": "^20.0.2",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "@react-navigation/stack": "^6.3.20",
-    "@types/react-native-vector-icons": "^6.4.18",
-    "@types/react-navigation": "^3.0.8",
     "date-fns": "^4.1.0",
-    "expo": "~49.0.0",
-    "expo-auth-session": "~5.0.2",
-    "expo-constants": "~14.4.2",
-    "expo-dev-client": "~2.4.13",
-    "expo-device": "~5.4.0",
-    "expo-notifications": "~0.20.1",
-    "expo-secure-store": "~12.3.1",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "firebase": "^11.1.0",
-    "metro": "^0.81.0",
-    "metro-core": "^0.81.0",
-    "metro-react-native-babel-transformer": "^0.77.0",
+    "expo": "~51.0.0",
+    "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
+    "expo-notifications": "~0.28.19",
+    "expo-secure-store": "~13.0.2",
+    "expo-splash-screen": "~0.27.7",
+    "expo-status-bar": "~1.12.1",
+    "firebase": "^9.23.0",
+    "metro-core": "^0.83.3",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.10",
+    "react-native": "0.74.5",
     "react-native-calendars": "^1.1301.0",
-    "react-native-dotenv": "^3.4.11",
     "react-native-paper": "^5.11.1",
-    "react-native-permissions": "^5.2.1",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
-    "react-native-web": "~0.19.6",
-    "tapable": "^2.2.1",
-    "webpack": "^5.97.1"
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
