Fix image positioning and saint name display - hide 'Not Found', adjust image cropping for specific dates

--- a/app.json
+++ b/app.json
@@ -46,7 +46,8 @@
     },
     "owner": "mpc_triengen_sv_naum",
     "plugins": [
-      "expo-font"
+      "expo-font",
+      "expo-build-properties"
     ]
   }
 }
