--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "date-fns": "^4.1.0",
     "expo": "~51.0.0",
-    "expo-build-properties": "^1.0.9",
+    "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
     "expo-font": "~12.0.10",
