Fix iOS push notification registration and bump versions to 1.0.16

--- a/eas.json
+++ b/eas.json
@@ -34,5 +34,12 @@
         }
       }
     }
+  },
+  "submit": {
+    "production": {
+      "android": {
+        "releaseStatus": "draft"
+      }
+    }
   }
 }
